--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
+							<li>Aug 2025: New papers in JALM, Blood Advances, and Clinics in Laboratory Medicine</li>
 							<li>July 2025: Attila Jamilov joins the lab!</li>
 							<li>May 2025: Multiple abstracts presented at the 2025 API conference.</li>
 							<li>May 2025: Amber Chen passed her PhD general exam!</li>
 							<li>Jan 2025: New paper in <a href="https://rdcu.be/d7OHL">Nature Communications</a></li>
-							<li>Jan 2025: Derek Zhu joins the lab!</li>
 							<li>Dec 2024: New paper in <a href="https://www.nature.com/articles/s41586-024-08264-5"> Nature!</a></li>
 						</ul>
 					</section>
