--- a/tools.html
+++ b/tools.html
@@ -55,6 +55,21 @@
 				</p>
 
 				<br><br>
+				<h2> Urine drug testing auto-interpreter </h2>
+				<div class="row double">
+					<div class="3u">
+						<a href="#" class="image"><img src="images/urine-signout.png" alt="" width="130%"></a>
+					</div>
+					<div class="9u">
+						We created a machine learning tool which can interpret results of urine drug testing (immunoassays, mass spectrometry, etc.)
+						and then generate a preliminary clinical sign-out. This tool is in active deployment to aid UW Medicine's clinical chemistry service.
+						We can't share data or code yet - but will publish our findings soon.
+					</div>
+				</div>
+
+
+
+				<br><br>
 				<h2> Red cell differential </h2>
 				<div class="row double">
 					<div class="3u">
