Nov 2025 lab website update

--- a/people.html
+++ b/people.html
@@ -139,22 +139,6 @@
 			<br><br>
 			<div class="row">
 				<div class="3u">
-					<a class="image"><img src="images/lab-member-headshots/namrata_harish.png" alt=""
-							width="60%"></a>
-					<b>Namrata Harish</b>
-					<br> <b>Undergraduate</b>
-				</div>
-				<div class="9u">
-					Namrata is a fourth year student at UW studying bioengineering with a concentration in data science. 
-					She is interested in the applications of AI/ML to improve the quality and accessibility of healthcare. 
-					Outside of academics, she enjoys crafting, playing the violin, and recently started learning tennis.
-					<br><br>
-					<a href="http://www.linkedin.com/in/namrata-harish/">LinkedIn</a>
-				</div>
-			</div>
-			<br><br>
-			<div class="row">
-				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/derek_zhu.png" alt=""
 							width="60%"></a>
 					<b>Derek Zhu</b>
@@ -216,6 +200,7 @@
 		<div class="container">
 			<div class="row">
 				<br> <a href="https://www.linkedin.com/in/nlaha">Nathan Laha</a>. Program assistant. 
+				<br> <a href="http://www.linkedin.com/in/namrata-harish/">Namrata Harish</a>. Undergraduate research assistant.
 			</div>
 		</div>
 	</section>
