--- a/join.html
+++ b/join.html
@@ -54,6 +54,8 @@
 					care about clinical impact. Interested applicants should read the information below
 					and our <a href="pdfs/Prospective Applicants Guide.pdf">application guide</a>, and then <a href="mailto:brodyfoy@uw.edu">email Brody</a>.
 					<br><br>
+					We are currently looking to hire 1-2 postdoctoral fellows. Read the job post <a href="pdfs/Postdoc_Role_Dec2025.pdf">here</a>, and if you are a good fit, please reach out to Brody.
+					<br><br>
 					If you don’t match the categories below but still think you are a good fit for the lab, please send an email
 					with your CV and an explanation.
 					</p>
