--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
+							<li>Dec 2025: We are looking to hire a postdoc! Read out job post <a href="pdfs/Postdoc_Role_Dec2025.pdf">here.</a></li>
+							<li>Nov 2025: New <a href="https://www.medrxiv.org/content/10.1101/2025.11.24.25340905v1">pre-print</a> led by lab member Namrata</li>
 							<li>Aug 2025: New papers in JALM, Blood Advances, and Clinics in Laboratory Medicine</li>
 							<li>July 2025: Attila Jamilov joins the lab!</li>
 							<li>May 2025: Multiple abstracts presented at the 2025 API conference.</li>
