--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
 			<div class="row">
 				<div class="8u">
 					<section>
-						<h2>We develop computational methods for lab medicine</h2>
+						<h2>We are building the future of blood testing!</h2>
 						<div class="image fit"><img src="images/lab-group-photo.jpeg" alt="" width="500" height="340"></div>
-						<p>We are part of the Department of Laboratory Medicine & Pathology, and Department of Bioengineering. Hospitals collect so much data through laboratory testing, and we want to use it better. 
-							We build computational tools to improve patient care, save clinician time, and uncover physiologic insights. Our approaches intersect 
-							math modelling and machine learning with large-scale, multi-modal clinical data. 
-							We work on problems across medicine, but are particularly focused on hematology, cardiology, and critical care. </p>
+						<p>Hospitals do so much testing - we want to make it faster, cheaper, and more  accurate.
+							We are part of the Departments of Laboratory Medicine & Pathology, and Bioengineering.
+							We build computational tools that improve patient care, save clinician time, and uncover 
+							physiologic insights. We work on problems across medicine: including hematology,
+							cardiology, and critical care.</p>
 					</section>
 				</div>
 				<div class="4u">
