--- a/join.html
+++ b/join.html
@@ -48,9 +48,9 @@
 			<h2>JOIN</h2>
 		</header>
 		<div class="container">
-			<section>
+			<section>		
 				<p>We work on cutting-edge problems at the intersection of computation and medicine. We are interested
-					in scientists with diverse backgrounds and training, who share a love for this intersection and
+					in scientists with diverse backgrounds and training, who love building models and
 					care about clinical impact. Interested applicants should read the information below
 					and our <a href="pdfs/Prospective Applicants Guide.pdf">application guide</a>, and then <a href="mailto:brodyfoy@uw.edu">email Brody</a>.
 					<br><br>
@@ -67,9 +67,9 @@
 		<div>
 			<h2> UNDERGRADUATES</h2>
 			<p>We can offer research-for-credit projects for UW undergraduates. Interested students should
-				have experience with programming in a data-analysis language (R, Python, MATLAB) and have taken at least
+				have experience with programming in a data-analysis language (R, Python,etc.) and have taken at least
 				one university-level statistics class. Applicants should follow instructions in the
-				lab manual. Note that we do not take on high school students in any capacity, and cannot offer roles to non
+				application guide above. Note that we do not take on high school students in any capacity, and cannot offer roles to non
 				UW students.
 			</p>
 			<hr class="divider">		
@@ -77,26 +77,24 @@
 		<br>
 		<div>
 			<h2> GRADUATE STUDENTS</h2>
-			<p> Currently enrolled masters/PhD students at UW interested in either a rotation or full-term project
-				should email a CV and explanation of their research goals. For thesis committee requests email a CV, and project outline.
+			<p> Currently enrolled masters/PhD students at UW interested in either a rotation or full-term project, or thesis committee membership
+				should email Brody a CV and explanation of their research goals.
 				<br><br>
-				Most graduate programs at UW are not direct admit – meaning I cannot admit you to the lab if
+				Most graduate programs at UW are not direct admit – meaning we cannot admit you to the lab if
 				you are not already enrolled at UW.
 				However, if you are an exceptional student whose background and interests are strongly aligned with our
-				lab, please email a CV and brief explanation of your research
-				goals. Due to uncertainty of entry, applicants who are not an extremely strong fit may not receive a
-				reply.
+				lab, please email Brody with your CV and a brief explanation of your research
+				goals.
 			</p>
 			<hr class="divider">		
 		</div>
 		<br>
 		<div>
 			<h2>POSTDOCS & RESIDENTS</h2>
-			<p>We are interested in postdocs with computational skills and illustrated prior
-				interests in healthcare or biology. We also offer projects for UW residents who have at least some
+			<p>We are interested in postdocs with computational skills and experience with healthcare or biology applications.
+				We also offer projects for UW residents who have at least some
 				programming
-				experience. Applicants should email a CV, at least one prior
-				publication, and a brief description of your research goals.
+				experience. Applicants should email Brody their CV, one relevant prior publication, and a brief description of their research goals.
 			</p>
 			<hr class="divider"/>	
 		</div>
@@ -106,7 +104,7 @@
 			<p>A detailed overview of expectations and philosophy of our lab is given in the <a href="pdfs/Prospective Applicants Guide.pdf">application guide</a>.
 				We believe in collaborative, open-science, and creating a supportive environment for all members. All members will have opportunity
 				to shape the direction of their project, to learn new skills, and to set development goals that align
-				with their future career interests. We aim to work hard and do good science, but to ensure we have rich
+				with their future career interests. We aim to work hard and do good science, but to also ensure we have rich
 				and rewarding lives outside of academia.
 			</p>
 		</div>
