--- a/people.html
+++ b/people.html
@@ -57,14 +57,14 @@
 					<br> <b> Adjunct Assistant Professor, Department of Bioengineering</b>
 				</div>
 				<div class="9u">
-					Brody is a mathematician who develops computational tools for medicine. He was a
-					graduate student in computer science at the University of Oxford, and a postdoctoral fellow in
-					systems biology at Harvard Medical School, and Massachusetts General Hospital. He has expertise in  
-					computational mathematics, machine learning, hematology, and the translational of computational tools
-					into the clinic. Brody is a Rhodes Scholar, and has won awards for excellence in teaching and mentoring, 
-					research, and for outstanding volunteer work. He has also worked in suicide prevention, policy outreach, 
-					and ran a non-profit AI consultancy. He is originally from the Sunshine Coast, Australia, and misses 
-					good beaches and the rainforest. Outside of work he likes to play guitar, hit tennis balls, and hike.
+					Brody is a mathematician and statistician by training. He received a DPhil in Computer Science from 
+					the University of Oxford, and did postdoctoral training in systems biology and pathology at Harvard 
+					Medical School and Massachusetts General Hospital. He cares about building cutting-edge computational 
+					methods that actually get deployed in the clinic. Brody is a Rhodes Scholar, and has won awards for 
+					excellence in teaching and mentoring, research, and for outstanding volunteer work. He has also worked 
+					in suicide prevention, policy outreach, and formerly ran a non-profit AI consultancy. He is originally 
+					from the Sunshine Coast, Australia, and misses good beaches and the rainforest. Outside of work he likes 
+					to play guitar, hit tennis balls, and hike.
 					<br><br><a href="pdfs/BrodyFoy_CV.pdf">CV</a>,
 					<a href="https://scholar.google.com/citations?user=e8W2uR0AAAAJ&hl=en">Scholar</a>,
 					<a href="https://dlmp.uw.edu/faculty/foy">Faculty</a>,
@@ -76,11 +76,12 @@
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/cindyzhang.png" alt="" width="60%"></a>
 					<b>Cindy Zhang</b>
-					<br> <b>Research Engineer, DLMP</b>
+					<br> <b>Graduate Student, BIME</b>
 				</div>
 				<div class="9u">
-					Cindy is a recent Johns Hopkins graduate in biomedical engineering and computer science with interests in computational biology 
-					and advancing health through AI/ML. She has also worked as a programmer analyst, barista, and math tutor. Originally from Minnesota, 
+					Cindy is a PhD student in the Department of Biomedical Informatics and Medical Education at UW. She has a background in 
+					biomedical engineering and computer science, with interests in computational biology and advancing health through AI/ML. 
+					She has also worked as a programmer analyst, research engineer, barista, and math tutor. Originally from Minnesota, 
 					she has a great appreciation for the summer. She enjoys trail runs, recreational swimming, and indoor climbing.
 					<br><br>
 					<a href="https://www.linkedin.com/in/cindy-zhang-">LinkedIn</a>
@@ -111,7 +112,7 @@
 					<br> <b>Undergraduate</b>
 				</div>
 				<div class="9u">
-					Amrit is currently a first-year student at UW intending to study Computer Science. He hopes to go
+					Amrit is currently a third-year student at UW studying Computer Science. He hopes to go
 					into quantitative finance as a career or become an entrepreneur in the AI/ML space. Outside of
 					school, he loves to spend time back in his hometown in the Bay Area hiking, cooking, and spending
 					time with family and friends.
@@ -128,7 +129,7 @@
 					<br> <b>Undergraduate</b>
 				</div>
 				<div class="9u">
-					Gaurang is a first-year Computer Science and Mathematics undergraduate at UW with a strong interest in
+					Gaurang is a third-year Computer Science and Mathematics undergraduate at UW with a strong interest in
 					machine learning and data analytics. He aspires to contribute to AI research, build an innovative
 					app, and teach computer science as a TA. His interests include playing chess, training judo,
 					and finding great places to eat.
