New lab members

--- a/people.html
+++ b/people.html
@@ -153,7 +153,7 @@
 					<a href="https://www.linkedin.com/in/derek-zhu-873477215/">LinkedIn</a>
 				</div>
 			</div>
-<br><br>
+			<br><br>
 			<div class="row">
 				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/attila_jamilov.jpg" alt=""
@@ -165,6 +165,20 @@
 					Attila is a third-year ACMS: Discrete Math and Algorithms student at UW with an interest in Backend, Low-Latency, and 
 					High-Performance Development. He wishes to contribute to open-source software and make highly optimized software. He 
 					has interests in bouldering, cycling, and reading web novels.
+					<br><br>
+				</div>
+			</div>
+			<br><br>
+			<div class="row">
+				<div class="3u">
+					<a class="image"><img src="images/lab-member-headshots/elvin_liu.jpg" alt=""
+							width="60%"></a>
+					<b>Elvin Liu</b>
+					<br> <b>Undergraduate</b>
+				</div>
+				<div class="9u">
+					Elvin is a fourth-year Statistics and Economics undergraduate at UW. He aspires to apply both data science and statistical methods 
+					to analyze otherwise difficult to quantify problems. Outside of school, he enjoys playing chess and going for walks with his dog.
 					<br><br>
 				</div>
 			</div>
