New lab member update

--- a/people.html
+++ b/people.html
@@ -182,6 +182,21 @@
 					<br><br>
 				</div>
 			</div>
+			<br><br>
+			<div class="row">
+				<div class="3u">
+					<a class="image"><img src="images/lab-member-headshots/akshay_ashok.jpg" alt=""
+							width="60%"></a>
+					<b>Akshay Ashok Nair</b>
+					<br> <b>Undergraduate</b>
+				</div>
+				<div class="9u">
+					Akshay is a first year undergraduate student at the University of Washington pursuing Electrical and Computer Engineering, with strong 
+					interests in machine learning and data science. He aims to apply AI in research settings while also developing intelligent hardware 
+					technologies. Outside of academics, he enjoys playing cricket, exploring new food spots, and drinking coffee. 
+					<br><br>
+				</div>
+			</div>
 		</div>
 	</section>
 
