--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,7 @@
 				<li><a href="research.html">Research</a></li>
 				<li><a href="publications.html">Publications</a></li>
 				<li><a href="tools.html">Tools</a></li>
+				<li><a href="demos.html">Demos</a></li>
 				<li><a href="media.html">Media</a></li>
 				<li><a href="join.html">Join</a></li>
 			</ul>
@@ -138,6 +139,7 @@
 								<li><a href="research.html">Research</a></li>
 								<li><a href="publications.html">Publications</a></li>
 								<li><a href="tools.html">Tools</a></li>
+								<li><a href="demos.html">Demos</a></li>
 								<li><a href="media.html">Media</a></li>
 								<li><a href="join.html">Join</a></li>
 							</ul>
