--- a/media.html
+++ b/media.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>PUBLICATIONS</title>
+	<title>MEDIA</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
@@ -50,11 +50,16 @@
 			<h2>MEDIA</h2>
 		</header>
 		<div class="container">
+
+<div class="container">
 			<section>
+				<div class="image fit"><img src="images/seminar.jpg" alt="" width="200" height="80"></div>
 				<p> Occasionally our work gets press! 
-					<br><br>Read some of the things we and others have written here:
+	
+					<br><br>
 				<h3>General</h3>
 				<li>Brody was interviewed for the <a href="https://podcasts.apple.com/us/podcast/improving-test-interpretation-through-personal-reference/id1770813734?i=1000691208097">PLUGS podcast</a>, talking about personalized reference intervals, AI in medicine, and statistical literacy.</li>
+				<li>Brody gave a <a href="https:/www.youtube.com/watch?v=v82MRBgrlf8">Grand Rounds seminar</a>, on the labs work.</li>
 				<br><br> 
 
 				<h3>Blood count setpoints</h3>
