--- a/people.html
+++ b/people.html
@@ -141,22 +141,6 @@
 			<br><br>
 			<div class="row">
 				<div class="3u">
-					<a class="image"><img src="images/lab-member-headshots/derek_zhu.png" alt=""
-							width="60%"></a>
-					<b>Derek Zhu</b>
-					<br> <b>Undergraduate</b>
-				</div>
-				<div class="9u">
-					Derek is a fourth-year Computer Science and ACMS undergraduate at UW with a huge interest in deep learning 
-					applications in medicine. He hopes to apply his skills in the field of AI as a researcher or pursue the field 
-					of quantitative finance. His interests include playing guitar, finding nearby cafes to eat at, and taking naps.
-					<br><br>
-					<a href="https://www.linkedin.com/in/derek-zhu-873477215/">LinkedIn</a>
-				</div>
-			</div>
-			<br><br>
-			<div class="row">
-				<div class="3u">
 					<a class="image"><img src="images/lab-member-headshots/attila_jamilov.jpg" alt=""
 							width="60%"></a>
 					<b>Attila Jamilov</b>
@@ -232,6 +216,7 @@
 			<div class="row">
 				<br> <a href="https://www.linkedin.com/in/nlaha">Nathan Laha</a>. Program assistant. 
 				<br> <a href="http://www.linkedin.com/in/namrata-harish/">Namrata Harish</a>. Undergraduate research assistant.
+				<br> <a href="https://www.linkedin.com/in/derek-zhu-873477215/">Derek Zhu</a>. Undergraduate research assistant.
 			</div>
 		</div>
 	</section>
