--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 					<section>
 						<h3>RECENT NEWS</h3>
 						<ul class="alt">
-							<li>Dec 2025: We are looking to hire a postdoc! Read out job post <a href="pdfs/Postdoc_Role_Dec2025.pdf">here.</a></li>
+							<li>Jan 2026: New paper in <a href="https://doi.org/10.1093/clinchem/hvag00">Clinical Chemistry</a>, and <a href="https://www.medrxiv.org/content/10.64898/2026.01.29.26345133v1">medRxiv pre-print</a></li>
+							<li>Jan 2026: Akshay and Elvin join the lab!</li>
 							<li>Nov 2025: New <a href="https://www.medrxiv.org/content/10.1101/2025.11.24.25340905v1">pre-print</a> led by lab member Namrata</li>
 							<li>Aug 2025: New papers in JALM, Blood Advances, and Clinics in Laboratory Medicine</li>
 							<li>July 2025: Attila Jamilov joins the lab!</li>
 							<li>May 2025: Multiple abstracts presented at the 2025 API conference.</li>
 							<li>May 2025: Amber Chen passed her PhD general exam!</li>
-							<li>Jan 2025: New paper in <a href="https://rdcu.be/d7OHL">Nature Communications</a></li>
-							<li>Dec 2024: New paper in <a href="https://www.nature.com/articles/s41586-024-08264-5"> Nature!</a></li>
+							<li>Jan 2025: New paper in <a href="https://www.nature.com/articles/s41586-024-08264-5"> Nature!</a></li>
 						</ul>
 					</section>
 				</div>
